fix FF display: table overflow bug

--- a/app/src/styles/views/CityView.less
+++ b/app/src/styles/views/CityView.less
@@ -12,9 +12,7 @@
 
   width: 100%;
   height: 100%;
-
-  table-layout: fixed;
-
+  
   background-color: @city-background-color;
 }
 
@@ -36,6 +34,15 @@
 }
 
 // background
+.city__background__container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+}
+
 .city__background {
   position: absolute;
   top: 0;
